z-index fix

--- a/app/assets/stylesheets/landing.css
+++ b/app/assets/stylesheets/landing.css
@@ -156,7 +156,7 @@
     top: 0px;
     margin: 9px;
     left: 375px;
-    z-index: 10000;
+    z-index: 1001;
     
 
 }
